@@ -1,4 +1,4 @@
-SmartOptimizer v1.6 beta
+SmartOptimizer v1.7 beta
 ------------------------
 Author: Ali Farhadi (http://farhadi.ir/)
 Released under the terms of the GNU Public License.
