@@ -13,16 +13,19 @@ $settings['charSet'] = 'utf-8';
 //Show error messages if any error occurs (true or false)
 $settings['debug'] = true;
 
-//use it to set gzip compression On or Off
+//use this to set gzip compression On or Off
 $settings['gzip'] = true;
+
+//use this to set gzip compression level (an integer between 1 and 9)
+$settings['compressionLevel'] = 9;
 
 //these types of files will not be gzipped nor minified
 $settings['gzipExceptions'] = array('gif','jpeg','jpg','png','swf'); 
 
-//use it to set Minifier On or Off
+//use this to set Minifier On or Off
 $settings['minify'] = true;
 
-//use it to set file concatenation On or Off
+//use this to set file concatenation On or Off
 $settings['concatenate'] = true;
 
 //separator for files to be concatenated
